revamped block(), completed whileLoop()